src/App.css
.gameContainer{
    display: flex;
    justify-content: center;
}
.gameLogo{
    width: 28.125rem;
}

.descContainer{
    display: flex;
    justify-content: center;
    align-items: center;
    margin-bottom: 3rem;
}
.gameIcon{
    margin-right: 3rem;
    height: 30%;
}
.description{
    width: 60%;

}

.wishlistContainer{
    display: flex;
    justify-content: center;
}
.wishlistText{
    text-align: center;
    display: block;
}
.wishlist{
    width: 15.625rem;
    border-radius: 7px;
    margin-bottom: 2rem;
}

